--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - webgl video webcam input
 		</div>
 
-		<script src="../build/three.js"></script>
-		<script src="../examples/js/controls/OrbitControls.js"></script>
-		<script src="js/WebGL.js"></script>
+		<script src="three.js"></script>
+		<script src="OrbitControls.js"></script>
+		<script src="WebGL.js"></script>
 
 		<video id="video" autoplay style="display:none"></video>
 
